--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,19 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  lottie: ^1.2.1
-  path_provider: ^2.0.8
+  lottie: ^1.2.2
+  path_provider: ^2.0.9
   google_fonts: ^2.3.1
-  palette_generator: ^0.3.2
+  palette_generator: ^0.3.3
   intl: ^0.17.0
   ez_localization: ^1.0.0
   animated_text_kit: ^4.2.1
   provider: ^6.0.2
-  file_picker: ^4.3.3
+  file_picker: ^4.4.0
   sticky_headers: ^0.2.0
+  async: ^2.8.2
+  unorm_dart: ^0.2.0
+  diacritic: ^0.1.3
 
 dev_dependencies:
   flutter_lints: ^1.0.4
